--- a/code-along.css
+++ b/code-along.css
@@ -1,3 +1,36 @@
-nav {
-  display: none;
+/* nav {
+  display: none
+} */
+
+img {
+  max-width: 175px;
+  height: 125px;
+}
+
+/* * {
+  border: 1px solid teal;
+} */
+
+section  {
+  display:flex;
+  flex-wrap: wrap;
+  /* justify-content: center;
+  justify-content: space-around;
+  justify-content: space-between;
+  justify-content: end;
+  justify-content: flex-end;
+  justify-content: flex-start; */
+  justify-content: space-evenly;
+}
+
+.container {
+  display: flex;
+  justify-content: space-around;
+}
+
+aside {
+  min-width: 20%;
+  display: flex;
+  align-items:center;
+  justify-content: center;
 }
